jEdit 4.4 version history
       (changes since jEdit 4.3)
:encoding=UTF-8:

{{{ Version 4.4.2

Thanks to Björn "Vampire" Kautler for contributing to this release.

{{{ Bug Fixes


}}}
{{{ Miscellaneous


}}}
{{{ API Changes


}}}
{{{ Editing


}}}

}}}

{{{ Version 4.4.1

Thanks to Björn "Vampire" Kautler, Kazutoshi Satoda, Alan Ezust,
and Matthieu Casanova for contributing to this release.

{{{ Bug Fixes

- Collapsing all folds will move the caret outside any fold if necessary
  (Matthieu Casanova)

- Fixed an exception that occurs when opening jEdit from command line
  with some files to open as argument if a jEdit server is running
  (#3173669 - Matthieu Casanova)

- jEdit now force drops from external applications to be COPY and not
  MOVE drops. It prevents ftp explorer from deleting dropped files
  (#1208598 - Matthieu Casanova)
  
- Changing bufferset scopes now saved to properties as default scope.
  (#3316329 - Matthieu Casanova)
  
- Buffersets no longer populated with open files when creating new view. 
  (#2990965 - Matthieu Casanova and Alan Ezust)  

- BufferSet contents of new Plain View #3317405 fixed (Matthieu Casanova)

- When the cursor was at a start (or end) of non-top (non-bottom) line,
  Find Next (Previous) for a non-empty regex starting with "^" (ending
  with "$") wrongly skipped the occurrence at the cursor.
  (SF.net bug #2953604 - Kazutoshi Satoda)

- Corrected a wrong specifications (javadoc comments) of
  SearchMatcher#nextMatch(). (SF.net bug #2953604 - Kazutoshi Satoda)

- Fixed an exception that prevent from opening properties dialog of non local
  files in the VFS Browser (#3199876 - Matthieu Casanova)

- Remove sending to background from the Linux start script, otherwise it cannot
  be used properly as commit editor with the -wait option or to get the -usage
  output on the commandline properly (Björn "Vampire" Kautler)

- Improve integration with Unity Launcher. Without this change if you pin jEdit